- Fix KDE 4.5 build
- Fix arm build

v0.3.0
------------------------------------------------
- Wicd 1.7.1 compatibility
- Port to Plasma

v0.2.3
------------------------------------------------
- Fix wicd-kde.kcfg

v0.2.2
------------------------------------------------
- Use KXmlGuiWindow (customizable toolbar and optional menubar)
- The application now depends on KDE 4.5
- The icons do not conflict with knetworkmanager anymore
- Rename binary to wicd-kde

v0.2.1
------------------------------------------------
- Fix potential crash when the connection is toggled with a double-click
- Various profile management fixes
- Add cmake option to specify which python binary to use
- Autocompletion when specifying static IP adress
- Connection infos in systray menu
- User interface options: signal strength label, tooltips and automatic scan on open
- Add czech translation
- Add brazilian portuguese translation
- Add hungarian translation

v0.2.0
------------------------------------------------
- The preferences panel is now a KCM.
- Use KNetworkManager icons + Bonus: use monochromatic icons if available
- Add spanish translation.
- Add chinese simplified translation.
- Add KNotification support.
- Add About dialog.

v0.1.1
------------------------------------------------
- Add italian translation.
- Change window title.
- Prevent multiple instances.
- Save/restore window size on close.

v0.1
------------------------------------------------
- Initial release. 